# JesusASM

./: .gitignore  CMakeLists.txt  build.gradle.kts  settings.gradle.kts  todo.txt
framework/: CMakeLists.txt
framework/include/JesusASM/: Attribute.h  Attributes.h  Name.h  Opcodes.h
framework/include/JesusASM/moduleweb-wrappers/: AttributeBuilder.h  ClassBuilder.h  FieldBuilder.h  FunctionBuilder.h  GlobalVarBuilder.h  InsnList.h  MethodBuilder.h  ModuleBuilder.h  ModuleInfo.h  OutStream.h
framework/include/JesusASM/parser/: ExpressionParser.h  InstructionParser.h  Parser.h  TokenStream.h
framework/include/JesusASM/tree/: AbstractInsnNode.h  ClassNode.h  FieldNode.h  FunctionNode.h  GlobalVarNode.h  InsnList.h  InsnNode.h  MethodNode.h  ModuleNode.h
framework/include/JesusASM/tree/instructions/: CallInsnNode.h  ClassInsnNode.h  FieldInsnNode.h  GlobalVarInsnNode.h  IncInsnNode.h  InsnNode.h  IntInsnNode.h  JumpInsnNode.h  LabelNode.h  LdcInsnNode.h  MethodInsnNode.h  VarInsnNode.h
framework/include/JesusASM/type/: Type.h
framework/src/: Attribute.cpp  Attributes.cpp  Opcodes.cpp
framework/src/lexer/: Lexer.vlex
framework/src/moduleweb-wrappers/: ClassBuilder.cpp  FieldBuilder.cpp  FunctionBuilder.cpp  GlobalVarBuilder.cpp  InsnList.cpp  MethodBuilder.cpp  ModuleBuilder.cpp  ModuleInfo.cpp  OutStream.cpp
framework/src/parser/: ExpressionParser.cpp  Parser.cpp
framework/src/tree/: ClassNode.cpp  FieldNode.cpp  FunctionNode.cpp  GlobalVarNode.cpp  InsnList.cpp  MethodNode.cpp  ModuleNode.cpp
framework/src/tree/instructions/: CallInsnNode.cpp  ClassInsnNode.cpp  FieldInsnNode.cpp  GlobalVarInsnNode.cpp  IncInsnNode.cpp  InsnNode.cpp  IntInsnNode.cpp  JumpInsnNode.cpp  LabelNode.cpp  LdcInsnNode.cpp  MethodInsnNode.cpp  VarInsnNode.cpp
framework/src/type/: Type.cpp
gradle/wrapper/: gradle-wrapper.properties
main/: CMakeLists.txt
main/src/: main.cpp
run/: Main.jasm  test.jasm  test.jmod
run/std/: IO.jasm  Primitives.jasm
run/vm/: System.jasm
src/main/kotlin/: AsmBuilder.kt  Main.kt
src/main/kotlin/codegen/: ModuleBytecodeBuffer.kt  Opcodes.kt
src/main/kotlin/codegen/builder/: BytecodeBuilder.kt  Class.kt  Constant.kt  Function.kt  Instruction.kt
src/main/kotlin/codegen/builder/constants/: ClassSymbol.kt  FunctionSymbol.kt
src/main/kotlin/environment/: Context.kt
src/main/kotlin/instruction/: Class.kt  Constants.kt  Directives.kt  Function.kt  Instruction.kt  Label.kt  NoOperandInstructions.kt  Value.kt
src/main/kotlin/instruction/operand/: Label.kt
src/main/kotlin/instruction/singleoperandinstruction/: CallInstruction.kt  ConstLoadInstruction.kt  GetFieldInstruction.kt  JmpInstructions.kt  LdcInstruction.kt  LdiInstruction.kt  LoadInstruction.kt  NewArrayInstruction.kt  NewArrayPrimInstruction.kt  NewInstruction.kt  NumberInstructions.kt  PutFieldInstruction.kt  StoreInstruction.kt
src/main/kotlin/lexer/: Lexer.kt  Token.kt
src/main/kotlin/parser/: ExpressionParser.kt  InstructionParser.kt  MetaData.kt  Parser.kt
src/main/kotlin/printer/: AsmPrinter.kt
src/main/kotlin/type/: ClassType.kt  FunctionType.kt  PrimitiveType.kt  Type.kt  Types.kt  VoidType.kt
src/main/kotlin/util/: SizeUtils.kt  WriteOnceProperty.kt
src/main/kotlin/util/extensions/: CharExtensions.kt  ListExtensions.kt  UIntExtensions.kt
